--- a/final_project/public/index.html
+++ b/final_project/public/index.html
@@ -21,6 +21,6 @@
 </head>
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
-  <script src="gameClient_v2.js"></script>
+  <script type="module" src="gameClient_v2.js"></script>
 </body>
 </html>
