fixed turnjumping, ai gets feedback, move consistent, bless rough anim(in convert lol)

--- a/final_project/public/index.html
+++ b/final_project/public/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/antiboredom/p5.patgrad/p5.patgrad.js"></script>
   <script type="module" src="gameClient_v2.js"></script>
 </body>
 </html>
