--- a/final_project/public/index.html
+++ b/final_project/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LLM Strategy Game - Clean UI</title>
+  <title>Playing God</title>
   <style>
     body {
       margin: 0;
